fix: close 1px gap between search button and input wrap
left: 29px placed the wrap outside the container's outer edge.
left: 28px aligns it with the padding-box reference, eliminating the line.

--- a/web/static/reliquary.css
+++ b/web/static/reliquary.css
@@ -71,7 +71,7 @@
   display: flex;
   align-items: center;
   position: absolute;
-  left: 29px;
+  left: 28px;
   top: -1px;
   height: 30px;
   width: 0;
